# project-work-bandi-regione-lombardia

./: README.md  ~$TRUZIONI_Traccia_Project_Work.docx  ~$template tabella sintesi bandi regione lombardia.xlsx
backups/: main_bck.py  rag_tool.py  reader_agent_bck.py
pj_bandi_regione_lombardia/: .env  README.md  pyproject.toml
pj_bandi_regione_lombardia/src/excel_output/: bandi_summary_20250709_105337.xlsx  bandi_summary_20250709_110221.xlsx  bandi_summary_20250709_111404.xlsx  bandi_summary_20250709_114932.xlsx
pj_bandi_regione_lombardia/src/json_description/: BANDO IMPIANTI SPORTIVI 2025.json  bando.json
pj_bandi_regione_lombardia/src/pj_bandi_regione_lombardia/: app.py  crew.py  main.py  rag.py
pj_bandi_regione_lombardia/src/pj_bandi_regione_lombardia/agents/: __init__.py  extractor_agent.py  reader_agent.py  writer_agent.py
pj_bandi_regione_lombardia/src/pj_bandi_regione_lombardia/excel_output/: bandi_summary_20250709_095829.xlsx  bandi_summary_20250709_110413.xlsx
pj_bandi_regione_lombardia/src/pj_bandi_regione_lombardia/json_description/: Allegato A senza allegati .json
pj_bandi_regione_lombardia/src/pj_bandi_regione_lombardia/tasks/: extractor_tasks.py  reader_tasks.py
pj_bandi_regione_lombardia/src/pj_bandi_regione_lombardia/tools/: reader_tools.py
pj_bandi_regione_lombardia/tests/: azure_connection.py  test_llm_connection.py
